--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
@@ -16,16 +17,17 @@
     "axios": "^1.11.0",
     "expo": "~53.0.22",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "^15.0.7",
+    "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.6",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.3.0",
-    "@expo/vector-icons": "^14.1.0",
-    "react-dom": "19.0.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
