--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0"
   },
