--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.11.0",
-    "expo": "~53.0.22",
+    "expo": "^54.0.6",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~7.1.7",
