--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-file-system": "~19.0.15",
+    "expo-sharing": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
