--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.11.0",
     "expo": "^54.0.6",
+    "expo-document-picker": "^14.0.7",
+    "expo-file-system": "~19.0.15",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
+    "expo-sharing": "~14.0.7",
     "expo-status-bar": "~2.2.3",
+    "pdf-parse": "^2.4.5",
+    "pdf2pic": "^3.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
@@ -31,8 +36,7 @@
     "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0",
-    "expo-file-system": "~19.0.15",
-    "expo-sharing": "~14.0.7"
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
